--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@ $# Index page for insecta.info Site
     <!-- Navbar (sit on top) -->
     <div class="w3-top">
       <div class="w3-bar w3-white w3-wide w3-padding w3-card-2">
-        <a href="#home" class="w3-bar-item w3-button"><b>G30</b> Consultants</a>
+        <a href="#home" class="w3-bar-item w3-button"><b>Insect Of The Day</b></a>
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#about" class="w3-bar-item w3-button">About</a>
